tests/errors/comprehensive/E2002_for_each_missing_closing_paren.ez
/*
 * Error Test: E2002 - for_each with opening paren but missing closing paren
 * Expected: "expected ), got { instead"
 */

do main() {
    temp items [int] = {1, 2, 3}
    for_each (item in items {
        temp x int = item
    }
}
